Fix text overflow in main banner

--- a/less/style.less
+++ b/less/style.less
@@ -1745,7 +1745,7 @@ Version: 1.0
      display: flex;
     }
     .carousel-inner {
-      height: 100vh;
+      min-height: 100vh;
     }
     .carousel-indicators {
       li {
@@ -1864,10 +1864,12 @@ Version: 1.0
       }
     }
     &__slide {
-      height: 100%;
+      min-height: 100vh;
       flex-direction: column;
       align-items: center;
-      justify-content: center;      
+      justify-content: center;
+      padding-bottom: 3.5rem;
+      padding-top: 3.5rem;
       .banner__category {
         font-size: 0.875rem;
         letter-spacing: 0.175em;   
@@ -2717,7 +2719,7 @@ Version: 1.0
     }
     .main-banner__slide {
       .banner__description {
-        width: 90%;
+        width: 80%;
       }
     } 
   }
